Enhance lore utility methods